--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600&display=swap');
+/* GLOBAL */
 *{
   margin: 0;
   padding: 0;
@@ -10,7 +11,9 @@ body{
     background-color: #111111;
     color: #ffffff;
 }
-
+img{
+    width: 100%;
+}
 /* Typing Style */
 .sentence{
     font-size: 3rem;
@@ -89,7 +92,7 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .5);
 }
 .intro-text{
     width: 60%;
@@ -114,4 +117,146 @@ body{
 }
 .volume_off{
     background-image: url("../assets/img/iconmonstr-sound-off-thin.svg");
+}
+.volume:hover{
+    transform: scale(1.1);
+}
+/* .intro-text__item{
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5sss ease;
+} 
+.intro-text__item_active{
+    visibility: visible;
+    opacity: 1;
+    transition: all .3s ease;
+} */
+.intro-text__2_invisible{
+    display: none;
+}
+.ancient-cards{
+    z-index: 10;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.ancient-cards__title{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+.cards{
+    display:  flex;
+    gap: 20px;
+    transition: all .5s ease;
+}
+.card{
+    
+}
+.card:hover{
+    transform: scale(1.1);
+    transition: all .5s ease;
+}
+.card:hover img{
+    box-shadow: rgba(0, 0, 0, 1) 0px 0px 26px 20px;
+}
+.card img{
+    box-shadow: rgba(0, 0, 0, 1) 6px 12px 16px 0px, rgba(0, 0, 0, 1) -6px -2px 16px 0px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.card_active{
+    display: block;
+    width: 20%;
+    height: 20%;
+    position: absolute;
+    top: 10%;
+    left: 5%;
+    cursor:none;
+    /* transform: translate(-35%,-35%); */
+}
+.back-icon{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-image: url('../assets/img/iconmonstr-arrow-left-lined.svg');
+    position: absolute;
+    bottom: 5%;
+    left: 1%;
+    cursor: pointer;
+    transition: all .3s ease;
+    visibility: hidden;
+}
+.back-icon:hover{
+    transform: scale(1.1);
+}
+.back-icon_active{
+    visibility: visible;
+}
+.levels{
+    flex: 1;
+    font-size: 1.7rem;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding-right: 50px;
+    margin-right: auto;
+}
+.levels div{
+    /* text-align: center; */
+    /* align-self: center; */
+    padding: 8px 40px;
+    cursor: pointer;
+    border: 1px solid #111;
+    margin-left: auto;
+    background-color: #111;
+    transition: all .3s ease;
+}
+.levels div.active-level{
+    background-color: #fff;
+    color: #111;
+    box-shadow: 0px 10.4502px 23.2228px -6.96683px #000;
+    transition: all .3s ease;
+}
+.levels div:hover{
+    transform: scale(1.1);
+}
+
+/* Myth Deck style */
+.deck{
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    min-width: 300px;
+
+}
+.deck > span{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+    flex-grow: 0;
+    flex-basis: 30%;
+    width: 100px;
+    flex-shrink: 1;
+    text-align: center;
+}
+.card-green{
+    background-color: #028A0f;
+    box-shadow: 0px 10.4502px 23.2228px -6.96683px #028A0f;
+}
+.card-yellow{
+    background-color: #FDA50F;
+    box-shadow: 0px 10.4502px 23.2228px -6.96683px #FDA50F;
+}
+.card-blue{
+    background-color: #2832c2;
+    box-shadow: 0px 10.4502px 23.2228px -6.96683px #2832c2;
 }
